Fix for workshop titles bleeding into workshop description.

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -68,7 +68,7 @@ hr.civ-topbar-hr{
 .wrap-workshop{
     border: 5px solid #075D00;
     background-color: gainsboro;
-    height:275px;
+    height:290px;
     margin-top:5px;
     position:relative;
 }
